--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
     <script src="https://wow.zamimg.com/widgets/power.js"></script>
     <script src="script.js"></script>
 <main>
-    <h2>
-        Here, let me wowhead that for you
-    </h2>
-    <input 
-        id="search-input"
-        type="text"
-    >
+    <div class="content-container">
+        <a class="logo" href="https://tbc.wowhead.com/"></a>
+        <h2>
+            Here, let me wowhead that for you
+        </h2>
+        <input 
+            id="search-input"
+            type="text"
+        >
 
-    <button id="search-submit">Go!</button> 
-    <div class="get-link-container">  
-        <button id="get-link" onclick="makeLink">Get link</button>
-        <div id="link-container">Share your search: </div>
-    </div> 
+        <button id="search-submit">Go!</button> 
+        <div class="get-link-container">  
+            <button id="get-link" onclick="makeLink">Get link</button>
+            <div id="link-container">Share your search: </div>
+        </div> 
     
-
+    </div>
 </main>
 </body>
