--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="script.js"></script>
 <main>
     <div class="content-container">
+        
         <a class="logo" href="https://tbc.wowhead.com/"></a>
         <h2>
             Here, let me wowhead that for you
@@ -19,7 +20,7 @@
             id="search-input"
             type="text"
         >
-
+        <div id="mouse" class="mouse"></div>
         <button id="search-submit">Go!</button> 
         <div class="get-link-container">  
             <button id="get-link" onclick="makeLink">Get link</button>
